# airq

./: .gitignore  LICENSE  README.md  icon.icns  pyproject.toml  requirements.txt  setup.py
airq/: README.md  __init__.py  __main__.py  api.py  app.py  consts.py  crypto.py  storage
airq/api/: __init__.py  crypto.py  storage.py
src/: .env.example  README.md  api.py  consts.py
tests/: test_airq.py
