[tool.poetry]
name = "airq"
version = "0.1.0"
description = ""
authors = ["Jeremias Robles <jeremias.robles@nordcloud.com>"]

[tool.poetry.dependencies]
pylint = "^2.6.0"
pycryptodome = "^3.9.9"
requests = "^2.24.0"
rumps = "^0.3.0"
python-dotenv = "^0.15.0"
py2app = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
